<resources>
    <string name="app_name">Jammit</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_mismatch_password">The passwords do not match</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="action_register">Register</string>
    <string name="prompt_password_verify">Verify Password</string>
    <string name="action_register_new">Create account</string>
    <string name="login_create_account_leading_text">Not a user?</string>
    <string name="register_label">Create new account</string>

    <string name="LOGIN_PREFS">edu.uw.tacoma.nfadili.Jammit.PREFS</string>
    <string name="LOGGEDIN">loggedin</string>
    <string name="logout_text">Logout</string>
    <string name="bio_label">Bio:</string>
    <string name="instruments_label">Instruments:</string>
    <string name="styles_label">Preferred Styles:</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
