<?xml version="1.0" encoding="utf-8"?>
<!--focusable prevents the keyboard from popping up automatically-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context="nfadili.tacoma.uw.edu.jammit.RegisterActivity">


    <ScrollView
        android:id="@+id/register_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/register_email_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="vertical">

            <!--Logo placement-->
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleX=".75"
                android:scaleY=".75"
                android:src="@drawable/logo"/>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <!--fontFamily isnt supported but I don't know how else to change the font-->
                <AutoCompleteTextView
                    android:id="@+id/register_email_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:fontFamily="sans-serif"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <!--fontFamily isnt supported but I don't know how else to change the font-->
                <EditText
                    android:id="@+id/register_password_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="italic"
                    android:fontFamily="sans-serif"
                    android:hint="@string/prompt_password"
                    android:imeActionId="@+id/register"
                    android:imeActionLabel="@string/action_register"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"/>

            </android.support.design.widget.TextInputLayout>

            <EditText
                android:id="@+id/register_password_verify_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="italic"
                android:fontFamily="sans-serif"
                android:hint="@string/prompt_password_verify"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"/>

            <!--fontFamily isnt supported but I don't know how else to change the font-->
            <Button
                android:id="@+id/register_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-smallcaps"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="60dp"
                android:layout_marginRight="60dp"
                android:text="@string/action_register"
                android:textStyle="bold"/>

        </LinearLayout>
    </ScrollView>

</LinearLayout>
